--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3,10 +3,10 @@
 @import 'typography.sass'
 @import 'buttons.sass'
 
+
 body
     background-color: $bgPriColor
     // background-color: #333
-
 
 nav
     width: 100%
@@ -30,6 +30,10 @@ nav
     .menu
         display: none
 
+    #themeToggle
+        position: fixed
+        bottom: 1rem
+        left: 1rem
 
 header
     width: 100%
