--- a/sass/typography.sass
+++ b/sass/typography.sass
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Nunito+Sans:wght@300;700;900&display=swap')
+// @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Nunito+Sans:wght@300;700;900&display=swap')
 // @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins:wght@200;300;500;800&display=swap')
-
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Lato:wght@300;400;700&display=swap')
 *,
 *::after,
 *::before
-    font-family: 'Nunito Sans', sans-serif
+    font-family: 'Lato', sans-serif
     font-weight: 300
 
 
