--- a/sass/buttons.sass
+++ b/sass/buttons.sass
@@ -7,8 +7,6 @@
     margin: 1.5rem 0
     font-weight: 400
     
-
-
 .primaryButton
     @extend .button
 
@@ -18,7 +16,6 @@
     &:hover
         background-color: -50
         
-
 .secondaryButton
     @extend .button
 
@@ -26,3 +23,6 @@
     color: $priColor
     box-shadow: inset 0 0 0 1px $priColor
 
+.linkbutton
+    color: orange
+    
