--- a/sass/variables.sass
+++ b/sass/variables.sass
@@ -2,18 +2,30 @@ $priColor: #009AD8
 $secColor: #ffe731
 $terColor: #e61969
 
-$bgPriColor: #30363f
+$bgPriColor: #2c2c2f
 $bgSecColor: #d4d4d4
 
-
-$fontPriColor: #333333
+$fontPriColor: #2c2c2f
 $fontSecColor: #d4d4d4
 $fontActionColor: #d4d4d4
 
 $midScreen: 520px
 $bigScreen: 900px
 
-$wrapper: 900px
+$wrapper: 1100px
 
+
+    
+// By default dark theme.
+
+    
+// light theme
+.lightTheme
+    $bgSecColor: #2c2c2f
+    $bgPriColor: #d4d4d4
+
+    $fontSecColor: #2c2c2f
+    $fontPriColor: #d4d4d4
+    $fontActionColor: #2c2c2f
 
 
