--- a/css/style.css
+++ b/css/style.css
@@ -23,18 +23,24 @@ h1 {
   color: white;
 }
 
-h2, h3 {
-  font-weight: 700;
-  font-size: 2rem;
+h2 {
+  font-size: 4rem;
+  line-height: 3rem;
+  font-family: 'Abril Fatface', cursive;
 }
 
 h3 {
+  font-weight: 700;
   font-size: 1.5rem;
 }
 
 p {
   font-weight: 300;
   font-size: 1rem;
+}
+
+strong {
+  font-weight: 700;
 }
 
 .button, .primaryButton, .secondaryButton {
@@ -107,7 +113,7 @@ nav #themeToggle {
   left: 1rem;
 }
 
-header {
+header, .container__sellarea, .services, .process {
   width: 100%;
   height: 90vh;
   display: -ms-grid;
@@ -116,9 +122,9 @@ header {
   color: #d4d4d4;
 }
 
-header .container__header {
+header .container__header, .container__sellarea .container__header, .services .container__header, .process .container__header {
   width: 90%;
-  max-width: 1000px;
+  max-width: 1100px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -128,16 +134,144 @@ header .container__header {
           justify-content: space-between;
 }
 
-header .container__header .box__header {
+header .container__header .box__header, .container__sellarea .container__header .box__header, .services .container__header .box__header, .process .container__header .box__header {
   margin: 7rem 0 auto 0;
 }
 
-header .container__header h1 {
+header .container__header h1, .container__sellarea .container__header h1, .services .container__header h1, .process .container__header h1 {
   line-height: 3.5rem;
   margin-bottom: 1rem;
 }
 
-header .container__header p {
+header .container__header p, .container__sellarea .container__header p, .services .container__header p, .process .container__header p {
   font-size: 1.3rem;
   margin-bottom: 1rem;
+}
+
+.container__sellarea {
+  background-color: #d4d4d4;
+  height: auto;
+  padding: 15rem 0;
+}
+
+.container__sellarea .box__sellarea {
+  width: 850px;
+  max-width: 1100px;
+}
+
+.container__sellarea .box__sellarea .title__sellarea {
+  -webkit-text-stroke: 1px #2c2c2f;
+  width: 580px;
+  margin: 0 0 3rem 0;
+}
+
+.container__sellarea .box__sellarea .info__sellarea {
+  width: 100%;
+  color: #2c2c2f;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.container__sellarea .box__sellarea .info__sellarea p {
+  max-width: 415px;
+}
+
+.container__sellarea .box__sellarea .info__sellarea .image__sellarea {
+  position: relative;
+  width: 305px;
+  height: 305px;
+  background-color: grey;
+  z-index: 100;
+}
+
+.container__sellarea .box__sellarea .info__sellarea .image__sellarea::before {
+  content: '';
+  position: absolute;
+  width: 66%;
+  height: 66%;
+  top: 17%;
+  left: 200px;
+  background-color: rgba(0, 154, 216, 0.3);
+  z-index: -1;
+}
+
+.services {
+  background-color: #d4d4d4;
+  height: auto;
+  padding: 15rem 0;
+}
+
+.services .container__services .box__services {
+  width: 850px;
+  max-width: 1100px;
+}
+
+.services .container__services .box__services .title__services {
+  position: relative;
+  -webkit-text-stroke: 1px #2c2c2f;
+  width: 580px;
+  background: transparent !important;
+  margin: 0 0 8rem 0;
+  z-index: 100;
+}
+
+.services .container__services .box__services .title__services::before {
+  content: '';
+  position: absolute;
+  width: 200rem;
+  height: 100%;
+  top: -1.5rem;
+  right: 15rem;
+  padding: 3rem;
+  background-color: rgba(0, 154, 216, 0.3);
+  z-index: -1;
+}
+
+.services .container__services .box__services .boxcards__services {
+  color: #2c2c2f;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.services .container__services .box__services .boxcards__services .card__services {
+  padding: 0 1rem 1rem 0.5rem;
+}
+
+.services .container__services .box__services .boxcards__services .card__services .img__service {
+  width: 90px;
+  height: 90px;
+  background-color: grey;
+  margin: 1rem 0;
+}
+
+.process {
+  background-color: #d4d4d4;
+  border: 2px solid red;
+  height: auto;
+  padding: 15rem 0;
+  color: #2c2c2f;
+}
+
+.process .container__process .box__process {
+  width: 850px;
+  max-width: 1100px;
+  position: relative;
+  border: 2px solid blue;
+}
+
+.process .container__process .box__process .extra__process {
+  border: 1px solid purple;
+  background-color: #009AD8;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 200px;
 }
