--- a/css/style2.css
+++ b/css/style2.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Nunito+Sans:wght@300;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Lato:wght@300;400;700&display=swap");
 *,
 *::after,
 *::before {
@@ -13,7 +13,7 @@
 *,
 *::after,
 *::before {
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-weight: 300;
 }
 
@@ -61,12 +61,16 @@ p {
           box-shadow: inset 0 0 0 1px #009AD8;
 }
 
+.linkbutton {
+  color: orange;
+}
+
 .borderMark, .wrapper {
   border: 1px rgba(255, 0, 0, 0.6) solid;
 }
 
 body {
-  background-color: #30363f;
+  background-color: #2c2c2f;
 }
 
 .wrapper {
