--- a/sass/typography.sass
+++ b/sass/typography.sass
@@ -13,16 +13,21 @@ h1
     font-size: 4rem
     color: white
 
-h2, h3
-    font-weight: 700
-    font-size: 2rem
+
+h2
+    font-size: 4rem
+    line-height: 3rem
+    font-family: 'Abril Fatface', cursive
+
 
 h3
-    // font-weight: 700
+    font-weight: 700
     font-size: 1.5rem
 
 
 p
     font-weight: 300
     font-size: 1rem
-    
+
+strong
+    font-weight: 700
