--- a/sass/typography.sass
+++ b/sass/typography.sass
@@ -24,6 +24,9 @@ h3
     font-weight: 700
     font-size: 1.5rem
 
+h4
+    font-weight: 500
+    font-size: 1.2rem
 
 p
     font-weight: 300
@@ -31,3 +34,7 @@ p
 
 strong
     font-weight: 700
+
+
+.handwriteMessage
+    font-size: 1rem
